--- a/app/assets/stylesheets/pages/home.scss
+++ b/app/assets/stylesheets/pages/home.scss
@@ -10,8 +10,8 @@ h1 {
 }
 
 .card-selection {
-  padding-left: 80px;
-  padding-right: 80px;
+  padding-left: 0px;
+  padding-right: 40px;
   background-color: white;
 }
 
